Initial  project setup for exercise 1_3