@@ -53,6 +53,28 @@ o resultado obtido foi o seguinte:
 out 12, 2021 8:17:47 DA TARDE com.mycompany.weather.WeatherStarter main
 INFO: max temp for today: 27.0
      
+Utilizou-se StringBuilder de forma a ser possível pesquisar a cidade pelo city code.
+Obteu-se o seguinte resultado:
+
+[INFO] Scanning for projects...
+[INFO]
+[INFO] ----------------< com.mycompany.weather:MyWeatherRadar >----------------
+[INFO] Building MyWeatherRadar 1.0-SNAPSHOT
+[INFO] --------------------------------[ jar ]---------------------------------
+[INFO]
+[INFO] --- exec-maven-plugin:3.0.0:java (default-cli) @ MyWeatherRadar ---
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by retrofit2.Platform (file:/C:/Users/pedro/.m2/repository/com/squareup/retrofit2/retrofit/2.9.0/retrofit-2.9.0.jar) to constructor java.lang.invoke.MethodHandles$Lookup(java.lang.Class,int)
+WARNING: Please consider reporting this to the maintainers of retrofit2.Platform
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+out 18, 2021 6:55:14 DA TARDE com.mycompany.weather.WeatherStarter main
+INFO: max temp for today: 24.4
+min temp for today: 16.8
+
+Comando para correr o programa no maven com argumentos: mvn exec:java -Dexec.mainClass="what to put here?" -Dexec.args="arg0 arg1 arg2"~
+
 # ---- Exercício 1.3 ---------
 
->>>>>>> 610cf497e58704263251a7d04e6ae995293ac144
+.gitignore - Ficheiros/Pastas que não devem ser incluídas no repositório
+
